--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,28 @@
 {
     "name": "Real Florida Man",
     "short_name": "Real Florida Man",
-    "version": "1.0",
+    "version": "1.1.3",
     "description": "Switches 'Donald Trump' and 'Florida Man' in headlines/Twitter/other things? Life's an adventure. Based on idea by @DAZZLESTORM",
+    "browser_action": {
+      "default_title": "Real Florida Man",
+      "default_popup": "options.html"
+    },
     "content_scripts": [
       {
         "matches": [
           "*://*/*"
         ],
         "js": [
+          // "third-party/jquery-2.2.2.min.js",
           "content.js"
         ],
         "run_at": "document_end"
       }
     ],
-    "options_page": "options.html",
+    "content_security_policy":  "script-src 'self' https://ajax.googleapis.com; object-src 'self'", // This is to add jquery
     "permissions": [
-      "storage"
+      "storage",
+      "contextMenus"
     ],
     "manifest_version": 2
   }
