--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Real Florida Man",
     "short_name": "Real Florida Man",
     "version": "1.1.3",
-    "description": "Switches 'Donald Trump' and 'Florida Man' in headlines/Twitter/other things? Life's an adventure. Based on idea by @DAZZLESTORM",
+    "description": "Switches 'Donald Trump' and 'Florida Man' in headlines/Twitter/other things? Life's an adventure. Based on joke by @DAZZLESTORM",
     "browser_action": {
       "default_title": "Real Florida Man",
       "default_popup": "options.html"
@@ -13,13 +13,12 @@
           "*://*/*"
         ],
         "js": [
-          // "third-party/jquery-2.2.2.min.js",
           "content.js"
         ],
         "run_at": "document_end"
       }
     ],
-    "content_security_policy":  "script-src 'self' https://ajax.googleapis.com; object-src 'self'", // This is to add jquery
+    "content_security_policy":  "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
     "permissions": [
       "storage",
       "contextMenus"
